# cat-cafe

./: BUILDDOCKER.yaml  README.MD  docker-compose.yml
backend-rust/: .gitignore  Cargo.toml  README.md  Rocket.toml  cosmic_cat_cafe.db  dockerfile
backend-rust/migrations/2025-03-11-012159_init/: down.sql  up.sql
backend-rust/sql/: init.sql
backend-rust/src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
frontend/: README.md  dockerfile  package-lock.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Navbar.css  Navbar.js  ProtectedRoute.js
frontend/src/pages/: LandingPage.js  Login.js  Menu.js  Sam.js
frontend/src/styles/: landing.css  login.css  menu.css  sam.css
