[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rocket_sync_db_pools = { version = "0.5.1", features = ["sqlite"] }

bcrypt = "0.17"
log = "0.71"

