[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rocket_sync_db_pools = { version = "0.1.0-rc.4", features = ["diesel_sqlite_pool"] }
diesel = { version = "2.2.0", features = ["sqlite", "r2d2", "chrono"] }

bcrypt = "0.17"

[[bin]]
name = "hash_sample_pass"
path = "src/bin/hash_sample_pass.rs"